--- a/core/res/res/values/custom_symbols.xml
+++ b/core/res/res/values/custom_symbols.xml
@@ -51,4 +51,7 @@
    <!-- Screenrecord -->
   <java-symbol type="bool" name="config_enableScreenrecordChord" />
 
+  <!-- Enable power button on secured lockscreen -->
+  <java-symbol type="bool" name="config_powerButtonLockscreenEnabled" />
+
 </resources> 
